# aoc

.helix/: languages.toml
2015/: Cargo.toml
2015/src/: day1.rs
2025/: Cargo.toml
2025/src/: day02.rs  day05.rs  day06.rs  day09.rs  day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day7.rs  day8.rs  lib.rs
