[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
average = "0.16.0"
cached = "0.56.0"
euclid = "0.22.11"
indicatif = { version = "0.18.3", features = ["rayon"] }
itertools = "0.14.0"
pathfinding = "4.14.0"
petgraph = "0.8.3"
rayon = "1.11.0"
regex = "1.12.2"
rstest = "0.26.1"
winnow = "0.7.14"
